--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
-.image-fluid {
-  max-width: 100%;
-  height: auto;
-  align-items: center;
-}
 
-/* .carousel-item {
-  max-width: 100px;
-  max-height: 100px;
-} */
+
+.item-3 {
+  object-fit: cover;
+  
+}
